; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c_db_insert_sign.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c_db_insert_sign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_enabled = common dso_local global i32 0, align 4
@insert_sign_stmt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_insert_sign(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i8* %6, i8** %14, align 8
  %15 = load i32, i32* @db_enabled, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %7
  br label %44

18:                                               ; preds = %7
  %19 = load i32, i32* @insert_sign_stmt, align 4
  %20 = call i32 @sqlite3_reset(i32 %19)
  %21 = load i32, i32* @insert_sign_stmt, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @sqlite3_bind_int(i32 %21, i32 1, i32 %22)
  %24 = load i32, i32* @insert_sign_stmt, align 4
  %25 = load i32, i32* %9, align 4
  %26 = call i32 @sqlite3_bind_int(i32 %24, i32 2, i32 %25)
  %27 = load i32, i32* @insert_sign_stmt, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @sqlite3_bind_int(i32 %27, i32 3, i32 %28)
  %30 = load i32, i32* @insert_sign_stmt, align 4
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @sqlite3_bind_int(i32 %30, i32 4, i32 %31)
  %33 = load i32, i32* @insert_sign_stmt, align 4
  %34 = load i32, i32* %12, align 4
  %35 = call i32 @sqlite3_bind_int(i32 %33, i32 5, i32 %34)
  %36 = load i32, i32* @insert_sign_stmt, align 4
  %37 = load i32, i32* %13, align 4
  %38 = call i32 @sqlite3_bind_int(i32 %36, i32 6, i32 %37)
  %39 = load i32, i32* @insert_sign_stmt, align 4
  %40 = load i8*, i8** %14, align 8
  %41 = call i32 @sqlite3_bind_text(i32 %39, i32 7, i8* %40, i32 -1, i32* null)
  %42 = load i32, i32* @insert_sign_stmt, align 4
  %43 = call i32 @sqlite3_step(i32 %42)
  br label %44

44:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @sqlite3_reset(i32) #1

declare dso_local i32 @sqlite3_bind_int(i32, i32, i32) #1

declare dso_local i32 @sqlite3_bind_text(i32, i32, i8*, i32, i32*) #1

declare dso_local i32 @sqlite3_step(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
